--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,35 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
+            <!--//android:theme="@style/AppTheme.NoActionBar">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+            <!-- News Feed Activity -->
+            <activity android:name="com.example.user.projectse.NewEventActivity" ></activity>
+
+           <!-- -->
+            <!--&lt;!&ndash; Friends Activity &ndash;&gt;-->
+            <!--<activity android:name="com.androidhive.dashboard.FriendsActivity" ></activity>-->
+
+            <!--&lt;!&ndash; Messages Activity &ndash;&gt;-->
+            <!--<activity android:name="com.androidhive.dashboard.MessagesActivity" ></activity>-->
+
+            <!--&lt;!&ndash; Places Activity &ndash;&gt;-->
+            <!--<activity android:name="com.androidhive.dashboard.PlacesActivity" ></activity>-->
+
+            <!--&lt;!&ndash; Events Activity &ndash;&gt;-->
+            <!--<activity android:name="com.androidhive.dashboard.EventsActivity" ></activity>-->
+
+            <!--&lt;!&ndash; Photos Activity &ndash;&gt;-->
+            <!--<activity android:name="com.androidhive.dashboard.PhotosActivity" ></activity>-->
+
+
     </application>
 
 </manifest>
