--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.projectse">
-
+    <uses-permission android:name="com.example.user.projectse.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permisson.SEND_SMS"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="MyAlarm">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -42,7 +44,8 @@
 
         <!-- &lt;!&ndash; Photos Activity &ndash;&gt; -->
         <!-- <activity android:name="com.androidhive.dashboard.PhotosActivity" ></activity> -->
-
+        <receiver android:name=".AlarmReceiver"  android:enabled="true"/>
+        <service android:name=".AlarmService" />
     </application>
 
 </manifest>
